<resources>
    <string name="app_name">Lebron </string>
    <string name="package_name">com.ceosilvajr.app.onlineshoppingcart</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_photos">My Photo</string>
    <string name="my_name">My Name</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="need_acc_reg">Need account? REGISTER</string>
    <string name="register">REGISTER</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_item_list">Home</string>
    <string name="title_activity_item_details">Product Details</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="title_activity_registration">Register</string>
    <string name="username">Username</string>
    <string name="cart">Cart</string>

    <string name="paypal">PayPal</string>
    <string name="paypal_message">Pay using PayPal account. You will be redirected to the PayPal system to complete the payment.</string>
    <string name="credit_debit">Credit / Debit card</string>
    <string name="credi_cards">Saved Credit Card(s)</string>
    <string name="cash_delivery">Cash On Delivery</string>
    <string name="cash_delivery_message">Pay upon receiving your goods from the comfort of your home, workplace or any shipping destination of your choice.</string>
    <string name="payment_message">Processing your payment.</string>
    <string name="thank_you">Successful payment. Thank you for shopping with us.</string>
    <string name="total">TOTAL</string>

    <string name="total_peso">TOTAL IN PESO</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="buy">BUY</string>
    <string name="continue_">CONTINUE</string>

</resources>
