<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    tools:context="com.ceosilvajr.app.onlineshoppingcart.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_splash_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:background="@drawable/bg_black"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="@android:color/secondary_text_dark" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="@android:color/secondary_text_dark" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/need_acc_reg"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>