<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ceosilvajr.app.onlineshoppingcart.RegistrationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_splash_2" />

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:background="@drawable/bg_black"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="@android:color/secondary_text_dark" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="@android:color/secondary_text_dark" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="@android:color/secondary_text_dark" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register" />
    </LinearLayout>


</RelativeLayout>
